[tool.poetry]
name = "custom-jinja2-extension-example"
version = "0.1.0"
description = "Sample application for the blog How to Write a Jinja2 Extension"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4"
Flask = "^2.2.5"
Jinja2 = "^3.0.1"
markdown2 = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
